# any2fasta_rust

./: Cargo.toml  README.md  test_any2fasta.sh
src/: main.rs
